Added basic layout toto default template.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,36 @@
-{% include header.html %}
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{ page.title }}</title>
+  
+  <!-- Base css -->
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
 
-{% include footer.html %}
+<div class="site">
+  <div class="title">
+    <a href="/">Jeremy Neal</a>
+  </div>
+
+  {{ content }}
+
+  <div class="footer">
+    <div class="contact">
+      <p>
+      Jeremy Neal, CS Student and Developer<br />
+      <a mailto="jneal2@umbc.edu">jneal2@umbc.edu</a>
+      </p>
+    </div>
+    <div class="contact">
+      <p>
+        <a href="http://github.com/sdroadie/">My Github</a>
+        <a href="http://twitter.com/@jneal7492">Twitter</a>
+      </p>
+    </div>
+  </div>
+</div>
+</body>
+</html>
