Added javascript to layout so the navigation menu works.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,5 +37,7 @@
   <div class="container" id="content">
     {{ content }} 
   </div>
+  <script src="/js/jquery.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
