Centered content on index page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,11 +35,11 @@
       </div>
     </div>
   </div>
-  <div class="container" id="content">
-    {{ content }} 
+  <div class="container">
+    {{ content }}
   </div>
   <script src="/js/jquery.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
-  <script src="/js/slide.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 </html>
