--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -40,6 +40,6 @@
   </div>
   <script src="/js/jquery.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
-  <script src="/js/slide.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 </html>
