--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Jeremy Neal</a>
+        <a class="navbar-brand" href="/index.html">Jeremy Neal</a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
@@ -37,7 +37,10 @@
   </div>
   <div class="container" id="content">
     <div class="section post">
-      {{ content }} 
+      {{ content }}
+      <div class="spacing">
+        <a href="/blog.html">Back to blog</a>
+      </div>
     </div>
   </div>
   <script src="/js/jquery.min.js"></script>
