--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,12 @@ html, body {
     padding-top: 20%;
 }
 
+.spacing {
+    height: 5%;
+    clear: both;
+    text-align: center;
+}
+
 #face {
     width: 50%;
     height: auto;
