--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,12 +39,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive img_small" src="img/profile.jpg" alt="My
+                    <img class="img-responsive img_small" src="img/profile.png" alt="My
                     face.">
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer</span>
+                        <span class="skills">Web/Mobile Developer</span>
                     </div>
                 </div>
             </div>
