Accidentally copied README from theme. Fixed.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
                     <p>I'm about to graduate from college, and am currently
                     looking for full-time employment when I do. I'm available to
                     relocate, and I'd like to work remotely if possible. If
-                    you're hiring, send me an email below!</p>
+                    you're hiring, contact me. Details are below!</p>
                 </div>
             </div>
         </div>
