Updated site info and added additional sidebar links.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,6 +24,9 @@
         {% endif %}
       {% endif %}
     {% endfor %}
+    <a class="sidebar-nav-item" href="{{ site.author.twitter }}">Twitter</a>
+    <a class="sidebar-nav-item" href="{{ site.author.github }}">Github</a>
+    <a class="sidebar-nav-item" href="mailto:{{ site.author.email }}">Email</a>
   </nav>
 
   <div class="sidebar-item">
