--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,11 +6,17 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
-  <span>If you enjoyed this post, follow me on <a href="{{ site.author.twitter }}">
-      Twitter</a>!</span> 
+  <div>If you enjoyed this post, follow me on <a href="{{ site.author.twitter }}">
+      Twitter</a>!</div>
+  <div class="tags">
+    <span>Tags:</span>
+    <ul class="tag-list">
+      {% for tag in page.tags %}
+        <li>{{ tag }}</li>
+      {% endfor %}
+    </ul>
+  </div>
 </div>
-
-
 
 <div class="related">
   <h2>Related Posts</h2>
