Added index page for poems and removed them from blog list.

--- a/_layouts/poem.html
+++ b/_layouts/poem.html
@@ -8,4 +8,6 @@ layout: default
   <pre class="poem">
     {{ content }}
   </pre>
+
+  <a href="{{ site.baseurl }}poems">&lt; See more poems</a>
 </div>
