--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,3 +17,18 @@ layout: default
     </ul>
   </div>
 </div>
+
+{% if page.custom-css %}
+  {% for css in page.custom-css %}
+  <link rel="stylesheet" href="/public/css/{{ css }}.css">
+  {% endfor %}
+{% endif %}
+
+{% if page.custom-js %}
+  {% for javascript in page.custom-js %}
+  <script src="/public/js/{{ javascript }}.js" type="text/javascript"></script>
+  {% endfor %}
+{% endif %}
+
+
+
