--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
         <div class="container">
           <h3 class="masthead-title">
             <a href="/" title="Home">{{ site.title }}</a>
+	    &mdash;
             <small>{{ site.tagline }}</small>
           </h3>
         </div>
