--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,15 +15,15 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/lanyon.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/custom.css">
+  <link rel="stylesheet" href='{{ "public/css/poole.css" | absolute_url }}'>
+  <link rel="stylesheet" href='{{ "public/css/syntax.css" | absolute_url }}'>
+  <link rel="stylesheet" href='{{ "public/css/lanyon.css" | absolute_url }}'>
+  <link rel="stylesheet" href='{{ "public/css/custom.css" | absolute_url }}'>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/apple-touch-icon-precomposed.png">
-  <link rel="shortcut icon" href="{{ site.baseurl }}public/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href='{{ "public/apple-touch-icon-precomposed.png" | absolute_url }}'>
+  <link rel="shortcut icon" href='{{ "public/favicon.ico" | absolute_url }}'>
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
